PRACTICA5/Practica-04-DEBERES/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones main

   2  definiciones :
   3               | definiciones definicion

   4  definicion : variable
   5             | funcion

   6  funcion : DEF ID '(' parametros ')' ':' tipoReturn body

   7  main : DEF MAIN '(' ')' ':' VOID body

   8  body : '{' variables sentencias '}'
   9       | '{' '}'
  10       | '{' sentencias '}'

  11  sentencias : sentencia
  12             | sentencias sentencia

  13  sentencia : RETURN expression ';'
  14            | while
  15            | print
  16            | input
  17            | if
  18            | ifSimple
  19            | invocationStat ';'
  20            | assignment

  21  invocationStat : ID '(' paramsInvocation ')'

  22  invocationExpr : ID '(' paramsInvocation ')'

  23  paramsInvocation : expressiones
  24                   |

  25  assignment : expression '=' expression ';'

  26  if : IF expression ':' sentencia ELSE sentencia
  27     | IF expression ':' sentencia ELSE '{' sentencias '}'
  28     | IF expression ':' '{' sentencias '}' ELSE sentencia
  29     | IF expression ':' '{' sentencias '}' ELSE '{' sentencias '}'

  30  ifSimple : IF expression ':' sentencia
  31           | IF expression ':' '{' sentencias '}'

  32  parametros : parametrosAUX
  33             |

  34  parametrosAUX : parametro
  35                | parametrosAUX ',' parametro

  36  parametro : ID ':' tipo

  37  variables : variable
  38            | variables variable

  39  variable : ident ':' tipoCompuesto ';'

  40  ident : ID
  41        | ident ',' ID

  42  tipo : INT
  43       | DOUBLE
  44       | CHAR

  45  tipoCompuesto : tipo
  46                | '[' INT_CONSTANT ']' tipoCompuesto
  47                | STRUCT '{' bodyStruct '}'

  48  tipoReturn : tipo
  49             | VOID

  50  bodyStruct : variablesStruct
  51             | bodyStruct variablesStruct

  52  variablesStruct : ident ':' tipoCompuesto ';'

  53  expressiones : expression
  54               | expressiones ',' expression

  55  expression : ID
  56             | expression '+' expression
  57             | expression '-' expression
  58             | expression '*' expression
  59             | expression '/' expression
  60             | expression '%' expression
  61             | expression '.' ID
  62             | '(' expression ')'
  63             | expression '[' expression ']'
  64             | '!' expression
  65             | '-' expression
  66             | expression '>' expression
  67             | expression '<' expression
  68             | expression DISTINTO expression
  69             | expression MAYORIGUAL expression
  70             | expression MENORIGUAL expression
  71             | expression EQUIVALENTE expression
  72             | expression AND expression
  73             | expression OR expression
  74             | REAL_CONSTANT
  75             | INT_CONSTANT
  76             | CHAR_CONSTANT
  77             | cast
  78             | invocationExpr

  79  cast : '(' tipo ')' expression

  80  while : WHILE expression ':' '{' sentencias '}'

  81  print : PRINT expressiones ';'

  82  input : INPUT expressiones ';'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . main  (1)
	definiciones : definiciones . definicion  (3)

	ID  shift 3
	DEF  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	variable  goto 7
	funcion  goto 8
	ident  goto 9


state 3
	ident : ID .  (40)

	.  reduce 40


state 4
	funcion : DEF . ID '(' parametros ')' ':' tipoReturn body  (6)
	main : DEF . MAIN '(' ')' ':' VOID body  (7)

	ID  shift 10
	MAIN  shift 11
	.  error


state 5
	programa : definiciones main .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : variable .  (4)

	.  reduce 4


state 8
	definicion : funcion .  (5)

	.  reduce 5


state 9
	variable : ident . ':' tipoCompuesto ';'  (39)
	ident : ident . ',' ID  (41)

	':'  shift 12
	','  shift 13
	.  error


state 10
	funcion : DEF ID . '(' parametros ')' ':' tipoReturn body  (6)

	'('  shift 14
	.  error


state 11
	main : DEF MAIN . '(' ')' ':' VOID body  (7)

	'('  shift 15
	.  error


state 12
	variable : ident ':' . tipoCompuesto ';'  (39)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 22


state 13
	ident : ident ',' . ID  (41)

	ID  shift 23
	.  error


state 14
	funcion : DEF ID '(' . parametros ')' ':' tipoReturn body  (6)
	parametros : .  (33)

	ID  shift 24
	')'  reduce 33

	parametros  goto 25
	parametrosAUX  goto 26
	parametro  goto 27


state 15
	main : DEF MAIN '(' . ')' ':' VOID body  (7)

	')'  shift 28
	.  error


state 16
	tipo : INT .  (42)

	.  reduce 42


state 17
	tipo : DOUBLE .  (43)

	.  reduce 43


state 18
	tipo : CHAR .  (44)

	.  reduce 44


state 19
	tipoCompuesto : STRUCT . '{' bodyStruct '}'  (47)

	'{'  shift 29
	.  error


state 20
	tipoCompuesto : '[' . INT_CONSTANT ']' tipoCompuesto  (46)

	INT_CONSTANT  shift 30
	.  error


state 21
	tipoCompuesto : tipo .  (45)

	.  reduce 45


state 22
	variable : ident ':' tipoCompuesto . ';'  (39)

	';'  shift 31
	.  error


state 23
	ident : ident ',' ID .  (41)

	.  reduce 41


state 24
	parametro : ID . ':' tipo  (36)

	':'  shift 32
	.  error


state 25
	funcion : DEF ID '(' parametros . ')' ':' tipoReturn body  (6)

	')'  shift 33
	.  error


state 26
	parametros : parametrosAUX .  (32)
	parametrosAUX : parametrosAUX . ',' parametro  (35)

	','  shift 34
	')'  reduce 32


state 27
	parametrosAUX : parametro .  (34)

	.  reduce 34


state 28
	main : DEF MAIN '(' ')' . ':' VOID body  (7)

	':'  shift 35
	.  error


state 29
	tipoCompuesto : STRUCT '{' . bodyStruct '}'  (47)

	ID  shift 3
	.  error

	ident  goto 36
	bodyStruct  goto 37
	variablesStruct  goto 38


state 30
	tipoCompuesto : '[' INT_CONSTANT . ']' tipoCompuesto  (46)

	']'  shift 39
	.  error


state 31
	variable : ident ':' tipoCompuesto ';' .  (39)

	.  reduce 39


state 32
	parametro : ID ':' . tipo  (36)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	.  error

	tipo  goto 40


state 33
	funcion : DEF ID '(' parametros ')' . ':' tipoReturn body  (6)

	':'  shift 41
	.  error


state 34
	parametrosAUX : parametrosAUX ',' . parametro  (35)

	ID  shift 24
	.  error

	parametro  goto 42


state 35
	main : DEF MAIN '(' ')' ':' . VOID body  (7)

	VOID  shift 43
	.  error


state 36
	ident : ident . ',' ID  (41)
	variablesStruct : ident . ':' tipoCompuesto ';'  (52)

	':'  shift 44
	','  shift 13
	.  error


state 37
	tipoCompuesto : STRUCT '{' bodyStruct . '}'  (47)
	bodyStruct : bodyStruct . variablesStruct  (51)

	ID  shift 3
	'}'  shift 45
	.  error

	ident  goto 36
	variablesStruct  goto 46


state 38
	bodyStruct : variablesStruct .  (50)

	.  reduce 50


state 39
	tipoCompuesto : '[' INT_CONSTANT ']' . tipoCompuesto  (46)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 47


state 40
	parametro : ID ':' tipo .  (36)

	.  reduce 36


state 41
	funcion : DEF ID '(' parametros ')' ':' . tipoReturn body  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	VOID  shift 48
	.  error

	tipoReturn  goto 49
	tipo  goto 50


state 42
	parametrosAUX : parametrosAUX ',' parametro .  (35)

	.  reduce 35


state 43
	main : DEF MAIN '(' ')' ':' VOID . body  (7)

	'{'  shift 51
	.  error

	body  goto 52


state 44
	variablesStruct : ident ':' . tipoCompuesto ';'  (52)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 53


state 45
	tipoCompuesto : STRUCT '{' bodyStruct '}' .  (47)

	.  reduce 47


state 46
	bodyStruct : bodyStruct variablesStruct .  (51)

	.  reduce 51


state 47
	tipoCompuesto : '[' INT_CONSTANT ']' tipoCompuesto .  (46)

	.  reduce 46


state 48
	tipoReturn : VOID .  (49)

	.  reduce 49


state 49
	funcion : DEF ID '(' parametros ')' ':' tipoReturn . body  (6)

	'{'  shift 51
	.  error

	body  goto 54


state 50
	tipoReturn : tipo .  (48)

	.  reduce 48


state 51
	body : '{' . variables sentencias '}'  (8)
	body : '{' . '}'  (9)
	body : '{' . sentencias '}'  (10)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 67
	.  error

	variable  goto 68
	variables  goto 69
	sentencias  goto 70
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	ident  goto 9
	cast  goto 81


state 52
	main : DEF MAIN '(' ')' ':' VOID body .  (7)

	.  reduce 7


state 53
	variablesStruct : ident ':' tipoCompuesto . ';'  (52)

	';'  shift 82
	.  error


state 54
	funcion : DEF ID '(' parametros ')' ':' tipoReturn body .  (6)

	.  reduce 6


state 55
	expression : INT_CONSTANT .  (75)

	.  reduce 75


state 56
	expression : REAL_CONSTANT .  (74)

	.  reduce 74


state 57
	invocationStat : ID . '(' paramsInvocation ')'  (21)
	invocationExpr : ID . '(' paramsInvocation ')'  (22)
	ident : ID .  (40)
	expression : ID .  (55)

	'('  shift 83
	MENORIGUAL  reduce 55
	MAYORIGUAL  reduce 55
	EQUIVALENTE  reduce 55
	DISTINTO  reduce 55
	OR  reduce 55
	AND  reduce 55
	'='  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'%'  reduce 55
	'.'  reduce 55
	'['  reduce 55
	':'  reduce 40
	','  reduce 40


state 58
	expression : CHAR_CONSTANT .  (76)

	.  reduce 76


state 59
	input : INPUT . expressiones ';'  (82)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 85
	invocationExpr  goto 80
	expressiones  goto 86
	cast  goto 81


state 60
	print : PRINT . expressiones ';'  (81)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 85
	invocationExpr  goto 80
	expressiones  goto 87
	cast  goto 81


state 61
	while : WHILE . expression ':' '{' sentencias '}'  (80)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 88
	invocationExpr  goto 80
	cast  goto 81


state 62
	if : IF . expression ':' sentencia ELSE sentencia  (26)
	if : IF . expression ':' sentencia ELSE '{' sentencias '}'  (27)
	if : IF . expression ':' '{' sentencias '}' ELSE sentencia  (28)
	if : IF . expression ':' '{' sentencias '}' ELSE '{' sentencias '}'  (29)
	ifSimple : IF . expression ':' sentencia  (30)
	ifSimple : IF . expression ':' '{' sentencias '}'  (31)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 89
	invocationExpr  goto 80
	cast  goto 81


state 63
	sentencia : RETURN . expression ';'  (13)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 90
	invocationExpr  goto 80
	cast  goto 81


state 64
	expression : '-' . expression  (65)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 91
	invocationExpr  goto 80
	cast  goto 81


state 65
	expression : '!' . expression  (64)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 92
	invocationExpr  goto 80
	cast  goto 81


state 66
	expression : '(' . expression ')'  (62)
	cast : '(' . tipo ')' expression  (79)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 93
	invocationExpr  goto 80
	tipo  goto 94
	cast  goto 81


state 67
	body : '{' '}' .  (9)

	.  reduce 9


state 68
	variables : variable .  (37)

	.  reduce 37


state 69
	body : '{' variables . sentencias '}'  (8)
	variables : variables . variable  (38)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	variable  goto 95
	sentencias  goto 96
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	ident  goto 9
	cast  goto 81


state 70
	body : '{' sentencias . '}'  (10)
	sentencias : sentencias . sentencia  (12)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 97
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 98
	.  error

	sentencia  goto 99
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	cast  goto 81


state 71
	sentencias : sentencia .  (11)

	.  reduce 11


state 72
	assignment : expression . '=' expression ';'  (25)
	expression : expression . '+' expression  (56)
	expression : expression . '-' expression  (57)
	expression : expression . '*' expression  (58)
	expression : expression . '/' expression  (59)
	expression : expression . '%' expression  (60)
	expression : expression . '.' ID  (61)
	expression : expression . '[' expression ']'  (63)
	expression : expression . '>' expression  (66)
	expression : expression . '<' expression  (67)
	expression : expression . DISTINTO expression  (68)
	expression : expression . MAYORIGUAL expression  (69)
	expression : expression . MENORIGUAL expression  (70)
	expression : expression . EQUIVALENTE expression  (71)
	expression : expression . AND expression  (72)
	expression : expression . OR expression  (73)

	MENORIGUAL  shift 100
	MAYORIGUAL  shift 101
	EQUIVALENTE  shift 102
	DISTINTO  shift 103
	OR  shift 104
	AND  shift 105
	'='  shift 106
	'>'  shift 107
	'<'  shift 108
	'+'  shift 109
	'-'  shift 110
	'*'  shift 111
	'/'  shift 112
	'%'  shift 113
	'.'  shift 114
	'['  shift 115
	.  error


state 73
	sentencia : while .  (14)

	.  reduce 14


state 74
	sentencia : print .  (15)

	.  reduce 15


state 75
	sentencia : input .  (16)

	.  reduce 16


state 76
	sentencia : if .  (17)

	.  reduce 17


state 77
	sentencia : ifSimple .  (18)

	.  reduce 18


state 78
	sentencia : invocationStat . ';'  (19)

	';'  shift 116
	.  error


state 79
	sentencia : assignment .  (20)

	.  reduce 20


state 80
	expression : invocationExpr .  (78)

	.  reduce 78


state 81
	expression : cast .  (77)

	.  reduce 77


state 82
	variablesStruct : ident ':' tipoCompuesto ';' .  (52)

	.  reduce 52


state 83
	invocationStat : ID '(' . paramsInvocation ')'  (21)
	invocationExpr : ID '(' . paramsInvocation ')'  (22)
	paramsInvocation : .  (24)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	')'  reduce 24

	expression  goto 85
	paramsInvocation  goto 117
	invocationExpr  goto 80
	expressiones  goto 118
	cast  goto 81


state 84
	invocationExpr : ID . '(' paramsInvocation ')'  (22)
	expression : ID .  (55)

	'('  shift 119
	MENORIGUAL  reduce 55
	MAYORIGUAL  reduce 55
	EQUIVALENTE  reduce 55
	DISTINTO  reduce 55
	OR  reduce 55
	AND  reduce 55
	'='  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'%'  reduce 55
	'.'  reduce 55
	'['  reduce 55
	']'  reduce 55
	')'  reduce 55
	':'  reduce 55
	';'  reduce 55
	','  reduce 55


state 85
	expressiones : expression .  (53)
	expression : expression . '+' expression  (56)
	expression : expression . '-' expression  (57)
	expression : expression . '*' expression  (58)
	expression : expression . '/' expression  (59)
	expression : expression . '%' expression  (60)
	expression : expression . '.' ID  (61)
	expression : expression . '[' expression ']'  (63)
	expression : expression . '>' expression  (66)
	expression : expression . '<' expression  (67)
	expression : expression . DISTINTO expression  (68)
	expression : expression . MAYORIGUAL expression  (69)
	expression : expression . MENORIGUAL expression  (70)
	expression : expression . EQUIVALENTE expression  (71)
	expression : expression . AND expression  (72)
	expression : expression . OR expression  (73)
